<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.example.mislugares.MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/titulo"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/Button01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/titulo"
        android:text="@string/accion_mostrar"/>

    <Button
        android:id="@+id/Button02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/titulo"
        android:text="@string/accion_preferencias"/>

    <Button
        android:id="@+id/Button03"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/titulo"
        android:onClick="lanzarAcercaDe"
        android:text="@string/accion_acerca_de"/>

    <Button
        android:id="@+id/Button04"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/titulo"
        android:text="@string/accion_salir"/>
</LinearLayout>
